src/objects/Outcome__c.object
<CustomObject>
    <description>Metrics by which the success of a project is judged</description>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Outcomes</relationshipLabel>
        <relationshipName>Outcomes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Key_Change__c</fullName>
        <label>Key Change</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Measure__c</fullName>
        <inlineHelpText>How will the outcome be measured?</inlineHelpText>
        <label>Measure</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Outcome_summary__c</fullName>
        <inlineHelpText>Please provide a summary of what the outcome is and how it will affect the service users</inlineHelpText>
        <label>Outcome summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Under Review</fullName>
                </value>
                <value>
                    <fullName>Live</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Outcome</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Outcome Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Outcomes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>